# test_uart_echo

./: CMakeLists.txt  LICENSE  README.md  main.camkes  system_config.h  uart_tester.c  uart_tester.camkes
plat/hifive/: plat_system_config.h
plat/nitrogen6sx/: plat_system_config.h
plat/odroidc2/: plat_system_config.h
plat/qemu-arm-virt/: plat_system_config.h
plat/rpi4/: plat_system_config.h
plat/sabre/: plat_system_config.h
plat/zynq7000/: plat_system_config.h
plat/zynqmp/: plat_system_config.h
tools/: test_uart_serial.py  test_uart_tcp.py
